--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#server.servlet.context-path=/prvniBanka
-server.port=8008
+#server.servlet.context-path=/uniconnector
+#server.port=8080
 #server.error.include-stacktrace=never
 
 #spring.jpa.hibernate.ddl-auto=update
@@ -8,8 +8,8 @@ server.port=8008
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=root
+#spring.datasource.password=root
