Added Swagger and description of controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,10 @@
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=root
 #spring.datasource.password=root
+
+#SWAGGER DOCUMENTATION
+isir.full.value=Returns full response about checked ICO/RC
+isir.simple.value=Returns just string answer yes/no
+isir.all.value=Receives all clients and incomes at ones and recieves results for all of them
+stolenDocuments.full.value=Returns full answer with date of check and number of checked document
+stolenDocuments.short.value=Returns just string answer yes/no
