Finished Stolen Documents Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ isir.simple.value=Returns just string answer yes/no
 isir.all.value=Receives all clients and incomes at ones and recieves results for all of them
 stolenDocuments.full.value=Returns full answer with date of check and number of checked document
 stolenDocuments.short.value=Returns just string answer yes/no
+stolenDocuments.full.mutliple=Checks all RC sent in request body
