fixed Documents controller + started database storing of results

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 
 #SWAGGER DOCUMENTATION
 isir.full.value=Returns full response about checked ICO/RC
