--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 
+server.error.include-stacktrace=never
+
 #SWAGGER DOCUMENTATION
 isir.full.value=Returns full response about checked ICO/RC
 isir.simple.value=Returns just string answer yes/no
